# fluorine-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
c-runtime/: .editorconfig  CMakeLists.txt  mem.h  men.h  move.h  string.c  string.h  value.c  value.h  vec.c  vec.h
examples/: expr.fss  fact.fss  generic_impl.fss  prelude.fss  trait.fss
lang/: Cargo.toml
lang-ffi-macro/: Cargo.toml
lang-ffi-macro/src/: lib.rs
lang/src/: lib.rs
lang/src/codegen/: c.rs  fs.rs  mod.rs
lang/src/ffi/: mod.rs
lang/src/runtime/: builtins.rs  eval.rs  mod.rs  pattern.rs  subst.rs
lang/src/runtime/builtins/: mod.rs  prelude.fss
lang/src/sema/: infer.rs  mod.rs
lang/src/syntax/: desugar.rs  grammar.pest  mod.rs  parse.rs  pe.rs  tree.rs
lang/src/syntax/desugar/: async_await.rs  dbi.rs  mod.rs
logo/: fluorine-logo.ai
script/: Cargo.toml
script/src/: eval.rs  fs.pest  functor.rs  lib.rs  optimize.rs  optimizer.rs  parse.rs  parser.rs  pattern.rs  pe.rs  subst.rs  tests.rs  tree.rs
script/src/codegen/: fs.rs  mod.rs
script/src/runtime/: eval.rs  mod.rs  pattern.rs
script/src/syntax/: optimize.rs  parse.rs  pe.rs  tree.rs
script/src/tree/: nodes.rs
script_core/: Cargo.toml
script_core/src/: fs.pest  tree.rs
script_repl/: Cargo.toml
src/: config.rs  main.rs  mod.rs
src/cli/: cli_main.rs  mod.rs
src/gui/: gui_main.rs  mod.rs
