[package]
name = "flourine-rs"
version = "0.1.0"
authors = ["imkiva <imkiva@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
script_core = { path = 'script_core' }
script_repl = { path = 'script_repl' }
iced = "0.1.0-beta"

