[package]
name = "flourine-rs"
version = "0.1.0"
authors = ["imkiva <imkiva@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lang = { path = 'lang' }
clap = "2.33.0"
dirs = "2.0.2"
rustyline = "6.0.0"

[[bin]]
name = "fl"
path = "src/mod.rs"
