[package]
name = "lang"
version = "0.1.0"
authors = ["imkiva <imkiva@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
lazy_static = "1.4.0"
spin = "0.5.2"
lang-ffi-macro = { path = '../lang-ffi-macro' }
